k8s/apps/bookstack/bookstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: apps
  labels:
    app: bookstack
spec:
  replicas: 0
  selector:
    matchLabels:
      app: bookstack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /config
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bookstack-pvc
