k8s/apps/bookstack/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-db
  namespace: apps
  labels:
    app: bookstack-db
spec:
  replicas: 0
  selector:
    matchLabels:
      app: bookstack-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bookstack-db
    spec:
      containers:
        - name: mariadb
          image: lscr.io/linuxserver/mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /config
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "300m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bookstack-db-pvc
