k8s/apps/bookstack/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db-svc
  namespace: apps
  labels:
    app: bookstack-db
spec:
  selector:
    app: bookstack-db
  ports:
    - port: 3306
      targetPort: 3306
