k8s/apps/bookstack/bookstack-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-svc
  namespace: apps
  labels:
    app: bookstack
spec:
  selector:
    app: bookstack
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: bookstack.marco-sr.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack-svc
                port:
                  number: 80
